# Sim_19F_pg

./: .gitignore  Dockerfile  README.md  build.sh  enter.sh  run.py  run_fluorine.py  run_reactions.py  run_sources.py
code/: CMakeLists.txt  SimLUNA.cc
code/include/: AnalysisManager.hh  AnalysisMessenger.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  EventActionMessenger.hh  Target.hh
code/jobscripts/: qsub_script.sh  run_qsub.sh
code/shared/gdml/setup/auxiliary/: Dome23napa_online_20230224.gdml
code/shared/gdml/setup/targets/: TargetHolderOuterFront10b.gdml
code/shared/include/actions/: PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackInformation.hh  TrackingAction.hh
code/shared/include/detectors/BGO/: BGO14Np.hh  BGO14NpHit.hh  BGO14NpMessenger.hh  BGO14NpSD.hh
code/shared/include/detectors/Ge/: GeHit.hh  GeSD.hh
code/shared/include/detectors/MSPAD5/: MSPAD5.hh  MSPAD5Hit.hh  MSPAD5SD.hh
code/shared/include/detectors/PDHamamatsuS14536/: PDHamamatsuS14536.hh  PDHamamatsuS14536Hit.hh  PDHamamatsuS14536SD.hh
code/shared/include/detectors/PDHamamatsuS3204/: PDHamamatsuS3204.hh  PDHamamatsuS3204Hit.hh  PDHamamatsuS3204SD.hh
code/shared/include/detectors/ScP/: ScP.hh  ScPHit.hh  ScPSD.hh
code/shared/include/detectors/Si/: Si.hh  SiHit.hh  SiSD.hh
code/shared/include/physics/: PhysicsList.hh  PhysicsListMessenger.hh
code/shared/include/physics/electromagnetic/: G4LindhardPartition.hh  G4ScreenedNuclearRecoil.hh  PhysListEmStandardNR.hh  c2_factory.hh  c2_function.hh  c2_function.icc
code/shared/include/physics/hadron/: HadronPhysics.hh  HadronPhysicsList.hh  HadronPhysicsListMessenger.hh  ParticleCaptureProcess.hh  ParticleCaptureXS.hh  ParticleInelasticXS.hh  ParticleRadCapture.hh  ParticleResRadCapture.hh  ParticleResonantCaptureProcess.hh  ParticleResonantCaptureXS.hh
code/shared/include/physics/heavyion/: HeavyIonPhysics.hh  IonC12.hh  StepLimiterPhysics.hh
code/shared/include/physics/radioactivedecay/: BiasedRDPhysics.hh
code/shared/include/setup/auxiliary/: Dome23napa.hh  Dome23napaMessenger.hh  Foil23napa.hh  Foil23napaMessenger.hh  Foilddgas.hh  Materials.hh  MaterialsMessenger.hh
code/shared/include/setup/beamline/: BeamPipe20nep.hh  ColdFinger16op.hh  Collimator20nep.hh  Collimatorddgas.hh
code/shared/include/setup/chambers/: Chamber20nep.hh  Chamberddgas.hh  (+2 more)
code/shared/src/actions/: PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackInformation.cc  TrackingAction.cc
code/shared/src/physics/: PhysicsList.cc  PhysicsListMessenger.cc
code/src/: AnalysisManager.cc  AnalysisMessenger.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  EventActionMessenger.cc  Target.cc
(+452 files in other folders)
